--- a/assets/css/frontend.css
+++ b/assets/css/frontend.css
@@ -1,4 +1,4 @@
-/* Jewellery Price Calculator - Frontend Styles v1.6.4 */
+/* Jewellery Price Calculator - Frontend Styles v1.6.5 */
 
 .jpc-price-breakup {
     margin: 20px 0;
@@ -52,6 +52,18 @@
 
 .jpc-price-breakup-table .discount-row td {
     color: #46b450;
+}
+
+.jpc-price-breakup-table .discount-row .discount-percentage {
+    color: #46b450;
+    font-weight: 700;
+    font-size: 14px;
+    margin-left: 5px;
+}
+
+.jpc-price-breakup-table .discount-row .discount-amount {
+    color: #46b450;
+    font-weight: 700;
 }
 
 .jpc-price-breakup-table .gst-row td {
