--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -53,7 +53,8 @@
     left: 0;
     top: 0;
     width: 100%;
-    height: 100%overflow: auto;
+    height: 100%;
+    overflow: auto;
     background-color: rgba(0,0,0,0.5);
 }
 
